# foo_et_al

./: LICENSE  README.md  pyproject.toml
src/foo_slm7777/: foo.py
