[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foo_slm7777"
version = "0.0.2"
authors = [
    { name="slm7777", email="slm77@psu.edu" },
]
description = "A physics package implementing a parameterized sphere on extendable base class foo"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ['numpy >= 1.23.5']

[project.urls]
Homepage = "https://github.com/slm7777/foo_et_al"
Issues = "https://github.com/slm7777/foo_et_al/issues"

